# preplane

./: .dockerignore  .env  .env.example  .gitignore  CRON_FIX_REPORT.md  END_TO_END_AUDIT_REPORT.md  FINAL_CORS_FIX_REPORT.md  FIX_REPORT.md  PHASE_0_BASELINE_REPORT.md  README.md  bun.lockb  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  render.yaml  tailwind.config.ts  vite.config.ts
.github/workflows/: keep-render-awake.yml  quality.yml  supabase-heartbeat.yml
.lovable/: plan.md
docs/: COPILOT.md  LMP_TRACKER_SHEET_MAPPING.md  PrepPocHeatmap_Redesign_Prompt.md  security-notes.md
e2e/: authenticated.spec.ts  public.spec.ts
public/: _headers
scripts/: backfill-internship-draft-types.sql  check-bundle.mjs
services/: .gitignore  Cargo.toml  Dockerfile.copilot  Dockerfile.python  Dockerfile.rust  Makefile  README.md
services/command-path/: Cargo.toml
services/command-path/src/: api.rs  lib.rs  main.rs  prepare.rs  validate.rs
services/command-plane/: Cargo.toml
services/command-plane/src/: api.rs  bus.rs  engine_client.rs  guard.rs  idempotency.rs  lib.rs  main.rs  rbac.rs  sse.rs  staging.rs  supabase.rs
services/command-plane/tests/: placeholder.rs
services/contracts/fixtures/: command_envelope_sample.json
services/contracts/python/: pyproject.toml
services/contracts/python/preplane_contracts/: __init__.py  models.py
services/contracts/python/tests/: test_roundtrip.py
services/contracts/rust/preplane-contracts/: Cargo.toml
services/contracts/rust/preplane-contracts/src/: lib.rs  types.rs
services/contracts/rust/preplane-contracts/tests/: roundtrip.rs
services/contracts/schemas/: canonical-request.json  command-envelope.json  copilot-block.json  event-envelope.json  intent-decision.json  sse-chunk.json  voice-request.json  voice-response.json  voice-speak-request.json
services/contracts/scripts/: generate.sh
services/deploy/: paths_host.py  start.sh
services/engines/analytics/: Cargo.toml
services/engines/analytics/src/: main.rs
services/engines/analytics/tests/: placeholder.rs
services/engines/calendar/: Cargo.toml
services/engines/calendar/src/: main.rs
services/engines/calendar/tests/: placeholder.rs
services/engines/career/: app.py
services/engines/career/tests/: test_placeholder.py
services/engines/interview/: app.py
services/engines/interview/tests/: test_placeholder.py
services/engines/lmp/: Cargo.toml
services/engines/lmp/src/: api.rs  execute.rs  lib.rs  main.rs  mirror.rs  supabase.rs
services/engines/lmp/tests/: placeholder.rs
services/engines/mentor/: app.py
services/engines/mentor/tests/: test_placeholder.py
services/engines/notification/: Cargo.toml
services/engines/notification/src/: main.rs
services/engines/notification/tests/: placeholder.rs
services/engines/poc/: app.py
services/engines/poc/tests/: test_placeholder.py
services/engines/resume/: app.py
services/engines/resume/tests/: test_placeholder.py
services/engines/sync/: Cargo.toml
services/engines/sync/src/: main.rs
services/engines/sync/tests/: placeholder.rs
services/event-bus/: Cargo.toml
services/event-bus/src/: config.rs  lib.rs  main.rs  redis_stream.rs  relay.rs  supabase.rs
services/event-bus/tests/: placeholder.rs
services/gateway/: Cargo.toml
services/gateway/src/: auth.rs  config.rs  dispatcher.rs  echo.rs  intent_client.rs  lib.rs  main.rs  orchestrator_client.rs  routes.rs  sse.rs  tts.rs  voice.rs
services/gateway/tests/: sse_compat.rs
services/governance/: Cargo.toml
services/governance/src/: abac.rs  audit.rs  contract.rs  lib.rs  rbac.rs
services/governance/tests/: placeholder.rs
services/infra/: docker-compose.yml  otel-collector-config.yaml
services/infra/migrations/: rollback_hybrid_ai_core.sql
services/intent-router/: Cargo.toml
services/intent-router/src/: api.rs  arbitration.rs  category.rs  context.rs  lib.rs  main.rs  router.rs  rules.rs  semantic.rs  similarity.rs
services/intent-router/tests/: fixture_parity.rs  placeholder.rs
services/orchestrator/: deno.json  main.ts  voice_handler.ts
services/orchestrator/copilot/: cache.ts  chat_handler.ts  constants.ts  copilotHeaders.ts  intentRouter.ts  modelConfig.ts  pathServices.ts  providers.ts  rag.ts  requestContext.ts  secrets.ts  systemPrompt.ts
services/orchestrator/copilot/tools/: log_submission.ts  runtime.ts  schemas.ts  web_search.ts
services/query-path/: Cargo.toml
services/query-path/src/: api.rs  data.rs  lib.rs  main.rs  scope.rs  templates.rs
services/reasoning/: app.py  planner.py
services/reasoning/tests/: test_placeholder.py  test_planner.py
services/semantic-classifier/: app.py  classifier.py
services/semantic-classifier/tests/: test_classifier.py  test_placeholder.py
services/shared/python/preplane_health/: __init__.py
services/shared/rust-health/: Cargo.toml
services/shared/rust-health/src/: lib.rs
services/workflow/: app.py  plan.py
services/workflow/tests/: test_placeholder.py  test_plan.py
src/: App.tsx  index.css  main.tsx
src/components/: PlaceholderView.tsx
src/hooks/: useAiUsage.ts  useCopilotThreads.ts
src/lib/: allocatorDashboardMetrics.ts  appOrigin.ts  avatarColors.ts  cohortProgram.ts  cohortProgramFilterContext.tsx  convertedStudentNames.ts  copilotBlocks.ts  copilotEngine.ts  copilotGateway.ts  copilotInferenceDisplay.ts  createLmpProcess.ts  csvTemplates.ts  dashboardDrill.ts  dashboardFilterLabels.ts  dashboardInfo.ts  dashboardViewRouting.ts  dateParser.ts  domainAllocation.ts  domainNormalize.ts  edgeFunctionError.ts  exportCsv.ts  extErrorMessage.ts  externalDiscoveryConfig.ts  externalMentorFilters.ts  externalMentors.ts  externalPlatforms.ts  feedbackTokens.ts  fetchWithTimeout.ts  heatmapDrilldown.ts  historicalLmpBackfill.ts  jdExtract.ts  jdStore.ts  lazyWithChunkReload.ts  lmpChatContext.tsx  lmpChecklist.ts  lmpCohortProgram.ts  lmpDetail.ts  lmpDrafts.ts  lmpFlags.ts  lmpOverdue.ts  (+40 more)
src/pages/: AiUsagePage.tsx  AlumniPage.tsx  AuditLogPage.tsx  CopilotPage.tsx  CreateLmpPage.tsx  (+13 more)
supabase/: config.toml
(+589 files in other folders)
