[workspace]
resolver = "2"
members = [
  "contracts/rust/preplane-contracts",
  "shared/rust-health",
  "governance",
  "gateway",
  "intent-router",
  "command-plane",
  "event-bus",
  "engines/lmp",
  "engines/sync",
  "engines/notification",
  "engines/calendar",
  "engines/analytics",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
schemars = { version = "0.8", features = ["chrono"] }
preplane-contracts = { path = "contracts/rust/preplane-contracts" }
preplane-health = { path = "shared/rust-health" }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
