[package]
name = "preplane-command-plane"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "preplane-command-plane"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
preplane-contracts = { workspace = true }
preplane-command-path = { path = "../command-path" }
preplane-health = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
