[package]
name = "preplane-event-bus"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "preplane-event-bus"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
preplane-health = { workspace = true }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

[dev-dependencies]
serde_json = { workspace = true }
