[package]
name = "preplane-intent-router"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "preplane-intent-router"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
regex = "1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
preplane-contracts = { workspace = true }
preplane-health = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
