[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "preplane-contracts"
version = "0.1.0"
description = "Python bindings for PrepLane hybrid AI wire contracts"
requires-python = ">=3.9"
dependencies = [
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["preplane_contracts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
