[package]
name = "preplane-lmp"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "preplane-lmp"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
preplane-contracts = { workspace = true }
preplane-governance = { path = "../../governance" }
preplane-health = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
