[package]
name = "preplane-contracts"
description = "Language-neutral wire contracts for the PrepLane hybrid AI architecture"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
schemars = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
